[gd_scene load_steps=4 format=3 uid="uid://b3rru5h82j308"]

[ext_resource type="Script" uid="uid://dg6se3uua512m" path="res://scripts/dungeon/dungeon_door.gd" id="1_door"]

[sub_resource type="LabelSettings" id="LabelSettings_door"]
font_size = 14
outline_size = 3
outline_color = Color(0, 0, 0, 0.9)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(1, 2)

[sub_resource type="RectangleShape2D" id="RectShape_door"]
size = Vector2(160, 240)

[node name="DungeonDoor" type="Node2D" groups=["dungeon_door"]]
script = ExtResource("1_door")

[node name="DoorSprite" type="Sprite2D" parent="."]

[node name="IconSprite" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.5, 0.5)

[node name="TypeLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = 30.0
offset_right = 40.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_door")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlowSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.9, 0.5, 0.4)

[node name="ClickArea" type="Area2D" parent="."]

[node name="ClickShape" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("RectShape_door")
